LinKreta_POC_Repository/force-app/main/default/objects/Opportunity/fields/Approved_Enquiry_Amount__c.field-meta.xml
<CustomField>
    <fullName>Approved_Enquiry_Amount__c</fullName>
    <description>This field contains a amount value which is approved in enquiry approval.</description>
    <label>Approved Enquiry Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>