LinKreta_POC_Repository/force-app/main/default/objects/Opportunity/fields/Auto_Enquiry_Closure_Date__c.field-meta.xml
<CustomField>
    <fullName>Auto_Enquiry_Closure_Date__c</fullName>
    <formula>LastModifiedDate  +90</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auto Enquiry Closure Date</label>
    <type>Date</type>
</CustomField>