LinKreta_POC_Repository/force-app/main/default/objects/Opportunity/fields/Expertise_TXT__c.field-meta.xml
<CustomField>
    <fullName>Expertise_TXT__c</fullName>
    <label>Expertise</label>
    <length>255</length>
    <type>Text</type>
</CustomField>