LinKreta_POC_Repository/force-app/main/default/objects/Opportunity/fields/PipelineCode__c.field-meta.xml
<CustomField>
    <fullName>PipelineCode__c</fullName>
    <displayFormat>EC-{00000}</displayFormat>
    <label>Enquiry Code</label>
    <type>AutoNumber</type>
</CustomField>