LinKreta_POC_Repository/force-app/main/default/objects/Opportunity/fields/SME_Competency__c.field-meta.xml
<CustomField>
    <fullName>SME_Competency__c</fullName>
    <label>SME/Competency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>