LinKreta_POC_Repository/force-app/main/default/objects/Opportunity/fields/SMEG__c.field-meta.xml
<CustomField>
    <fullName>SMEG__c</fullName>
    <label>SMEG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>