LinKreta_POC_Repository/force-app/main/default/objects/Opportunity/fields/StatusDSTeamRemarkStatus__c.field-meta.xml
<CustomField>
    <fullName>StatusDSTeamRemarkStatus__c</fullName>
    <label>Status ( DS Team Remark Status)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>