LinKreta_POC_Repository/force-app/main/default/objects/Opportunity/fields/TotalRevenue__c.field-meta.xml
<CustomField>
    <fullName>TotalRevenue__c</fullName>
    <label>Total Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>